# mixxx-kinetic

./: .gitignore  ALTAI-SETUP-CHECKLIST.md  CMakeLists.txt  configure_cmake.sh  remote-build.sh  remote-test.sh  ssh-config-for-altai.txt
cmake/modules/: FindFuse3.cmake  FindLibSecret.cmake
docs/: BEATPORT_INTEGRATION_SPEC.md  BLOCKERS.md  Beatport_API_Clinical_Analysis.md  Beatport_Integration_Strategy.md  CONSOLIDATED_API_REFERENCE.md  FoundationAssessment.md  IMPLEMENTATION_GUIDE_FOR_AGENTS.md  KINETIC_DEVLOG.md  MIXXX-KINETIC-SPEC.md  README.md  README2.md  SESSION_SNAPSHOT_2026-01-24.md  SSH-SECURITY.md  SessionCookieAuthFlow.md  StreamingAPILessonsLearned.md  TONIGHT_ACTION_PLAN.md  VERIFIED_STREAMING_API.md  WORKFLOW.md  mixxx-kinetic-strategy.md
docs/BeatPort/: AUTH_DIAGNOSTIC_STRATEGIES.md  AgenticIDE.md  BeatportAPIOFFICIAL.md  BrowserTools.md  CRITICAL_FIXES_REQUIRED.md  Code_Cleanup_Checklist.md  DEBUG_AUTH_STEP_BY_STEP.md  EXACT_CODE_FIXES.md  GivenVNotGiven.md  GoingForward.md  HAR_Analysis_Report.md  IMPLEMENTATION_ROADMAP.md  Next_Steps_After_HAR.md  SESSION_SUMMARY.md  SUCCESSES.md  Streaming_Integrations_Spec.md  beatport_account_api_specs.md  beatport_v4_api_reference.md  beatport_v4_openapi_full.md
src/: coreservices.cpp  coreservices.h  mixxxmainwindow.cpp
src/preferences/dialog/: dlgpreferences.cpp  dlgpreferences.h  dlgpreflibrary.cpp  dlgpreflibrary.h  (+2 more)
src/sources/: soundsourcekineticprovider.cpp  soundsourcekineticprovider.h  soundsourcekineticproxy.cpp  soundsourcekineticproxy.h  soundsourceproxy.cpp  soundsourceproxy.h  soundsourcestream.cpp  soundsourcestream.h  streamringbuffer.h
src/streaming/: CMakeLists.txt  manifestgenerator.cpp  manifestgenerator.h
src/test/: beatport_integration_test.cpp  bridgeclient_test.cpp  controller_mapping_validation_test.cpp  controllerscriptenginelegacy_test.cpp  headless_playback_test.cpp  kinetic_integration_test.cpp  manifestgenerator_test.cpp  mock_networkaccessmanager.h  playermanagertest.cpp  soundsourcekineticprovider_test.cpp
tools/mixxx-fs/: CMakeLists.txt  main.cpp  rangefetcher.h
(+34 files in other folders)
